<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/text_general">

        <ListPreference
            android:defaultValue="Вертикальный"
            android:entries="@array/note_style_array"
            android:entryValues="@array/note_style_values"
            android:key="note_style_key"
            android:icon="@drawable/ic_style"
            app:useSimpleSummaryProvider="true"
            android:title="@string/text_chose_note_style" />
        <ListPreference
            android:defaultValue="hh:mm:ss - dd/MM/yy"
            android:entries="@array/time_format_array"
            android:entryValues="@array/time_format_values"
            android:key="time_format_key"
            android:title="List preference"
            android:icon="@drawable/ic_time_format"
            app:useSimpleSummaryProvider="true"
            app:title="@string/text_time_format" />
        <Preference
            android:title="@string/remove_ads"
            android:summary="@string/remove_ads_summary"
            android:key="remove_ads_key"
            android:icon="@drawable/ic_remove"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/theme_settings">

        <ListPreference
            android:defaultValue="blue"
            android:entries="@array/theme_array"
            android:entryValues="@array/theme_values"
            android:key="theme_key"
            android:icon="@drawable/ic_theme_style"
            app:useSimpleSummaryProvider="true"
            android:title="@string/chose_theme" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/note_text_settings">

        <ListPreference
            android:defaultValue="16"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:key="title_size_key"
            android:icon="@drawable/ic_text_size"
            app:useSimpleSummaryProvider="true"
            android:title="@string/chose_text_size" />
        <ListPreference
            android:defaultValue="14"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:key="content_size_key"
            android:icon="@drawable/ic_text_size"
            app:useSimpleSummaryProvider="true"
            android:title="@string/content_text_size" />
    </PreferenceCategory>
</PreferenceScreen>